--- a/.htaccess
+++ b/.htaccess
@@ -1,25 +1,5 @@
-<IfModule mod_rewrite.c>
+<IfModule LiteSpeed>
     RewriteEngine On
-
-    # Redirect to HTTPS
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-    # Redirect www to non-www
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-
-    # Handle .env file access
-    <FilesMatch "^\.env">
-        Order allow,deny
-        Deny from all
-    </FilesMatch>
-
-    # Handle maintenance mode
-    RewriteCond %{DOCUMENT_ROOT}/storage/framework/maintenance.php -f
-    RewriteRule ^.*$ /storage/framework/maintenance.php [L]
-
-    # Handle public folder
     RewriteCond %{REQUEST_URI} !^/public/
     RewriteRule ^(.*)$ /public/$1 [L]
 </IfModule>
