--- a/public/__manifest.json
+++ b/public/__manifest.json
@@ -12,49 +12,64 @@
             "src": "assets/img/icon/72x72.png",
             "type": "image/png",
             "sizes": "72x72",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/96x96.png",
             "type": "image/png",
             "sizes": "96x96",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/128x128.png",
             "type": "image/png",
             "sizes": "128x128",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/144x144.png",
             "type": "image/png",
             "sizes": "144x144",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/152x152.png",
             "type": "image/png",
             "sizes": "152x152",
-            "purpose": "any maskable"
+            "purpose": "maskable"
         },
         {
             "src": "assets/img/icon/192x192.png",
             "type": "image/png",
             "sizes": "192x192",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/384x384.png",
             "type": "image/png",
             "sizes": "384x384",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/img/icon/512x512.png",
             "type": "image/png",
             "sizes": "512x512",
-            "purpose": "any maskable"
+            "purpose": "any"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "assets/img/screenshots/screenshot 1.png",
+            "sizes": "1280x800",
+            "type": "image/png",
+            "platform": "wide",
+            "form_factor": "wide"
+        },
+        {
+            "src": "assets/img/screenshots/screenshot 2.png",
+            "sizes": "750x1334",
+            "type": "image/png",
+            "platform": "narrow"
         }
     ]
 }
